project-2-task-flow/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: taskflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: bhargav072/taskflow-api
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
