project-2-task-flow/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: taskflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: bhargav072/taskflow-web
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 256m
              memory: 256Mi
